# coco-bbox-detector

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: getting-started.md
k8s/: README.md  cronjob-coco-bbox.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml.example  service.yaml
src/: config.yaml  main.py  test.py
src/bots/implementations/: coco_bbox_detector_databot.py
src/services/: coco_builder.py
